--- a/supnet/app/views/home/index.html.haml
+++ b/supnet/app/views/home/index.html.haml
@@ -4,9 +4,9 @@
 .container
   .row
     .col-sm-8
-      %h2{style: "margin: 45px 0 35px 0;"}
+      %h1{style: "margin: 45px 0 35px 0; font-weight: bold;"}
         Upload Portfolios
-        .small.text-muted
+        .small.text-muted{style: "font-weight: 500;"}
           and run PACTA reports on them.
 
       %p
